Fixed: iphone table view breaks the text into two lines.

--- a/src/App.css
+++ b/src/App.css
@@ -534,7 +534,7 @@ a.text-link {
 .thought,
 .thought-annotation {
   width: calc(100% - 1em); /* expand click area. offset content padding to prevent line break */
-  /*margin-left: 0.667em;*/
+  margin-left: 0.667em;
   /*display: inline-block;*/
   /*vertical-align: top;*/
   white-space: pre-wrap;
@@ -555,7 +555,7 @@ a.text-link {
   box-sizing: border-box;
   width: auto;
 
-  padding-left: 0.667em;
+  padding-left: 0.3em;
 }
 
 .thought-annotation .subthought {
@@ -589,7 +589,7 @@ a.text-link {
   /*padding-bottom: 0.25em;
   padding-top: 0.25em;*/
   position: relative; /* position above thought-annotation so that function background color does not mask thought */
-  width: calc(100% - 1em);
+  width: 100%;
 }
 
 .child .editable,
